# nn-from-scratch

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  Untitled.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
data/: heart_disease.csv
notebook/: heart_disease_analysis.ipynb
src/: api.py  nn_from_scratch.py  schemas.py
src/services/: artifacts.py  explain.py  metrics.py
