[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnfs-local"
version = "0.1.0"
description = "From-scratch NN utilities for the heart-disease project"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["nn_from_scratch"]
